--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,5 +8,5 @@ spring.h2.console.enabled= true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:data-prod.sql
-
+app-url=https://driver-goes-2-rest-api.herokuapp.com
 
