--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,5 +8,5 @@ spring.h2.console.enabled= true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:data-prod.sql
-app-url=http://localhost:4200
+app.url=http://localhost:4200
 
