--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,4 +9,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:data-prod.sql
 app.url=http://localhost:4200
+jwt.secret='absdiaoibasi129379kjnbasd&*^*812300njasd)(&*(&91243PJDSA0908(_)*()*)(1oal12k3pa'
+security.ignored='*.bundle.*'
 
