--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:driver_goes
+spring.datasource.url=jdbc:h2:mem:demo
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
@@ -9,5 +9,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.data-locations=classpath:data-prod.sql
 app.url=https://driver-goes-2-rest-api.herokuapp.com
+jwt.secret='absdiaoibasi129379kjnbasd&*^*812300njasd)(&*(&91243PJDSA0908(_)*()*)(1oal12k3pa'
 
 
