security last master commit

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,14 +1,20 @@
-spring.datasource.url=jdbc:h2:mem:driver_goes
+spring.datasource.url=jdbc:h2:file:./driver_goes
+spring.h2.console.path=/h2-ui
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #for development
 spring.h2.console.enabled= true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.data-locations=classpath:data-prod.sql
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.data-locations=classpath:data-prod.sql
+
+
+
+
 app.url=http://localhost:4200
-jwt.secret='absdiaoibasi129379kjnbasd&*^*812300njasd)(&*(&91243PJDSA0908(_)*()*)(1oal12k3pa'
-security.ignored='*.bundle.*'
+jwt.secret=absdiaoibasi129379k
+jwtCookieName= bezkoder
+jwtExpirationMs= 86400000
 
