--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,6 +15,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 app.url=http://localhost:4200
 jwt.secret=absdiaoibasi129379k
-jwtCookieName=token
+jwtCookieName=authorizationToken
 jwtExpirationMs= 86400000
 
